# tex

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config
migrations/2018-12-23-063832_names/: down.sql  up.sql
migrations/2018-12-23-063832_setup/: down.sql  up.sql
migrations/2019-01-08-151404_setup/: down.sql  up.sql
migrations/2019-01-14-225514_wiki/: down.sql  up.sql
src/: auth.rs  color.rs  command.rs  context.rs  db.rs  env.rs  error.rs  handler.rs  lib.rs  local.rs  logging.rs  models.rs  output.rs  responder.rs  response.rs  schema.rs  util.rs  vec.rs  wikidot.rs
src/background/: attributions.rs  bans.rs  diff.rs  mod.rs  pages.rs  titles.rs
src/command/: auth.rs  author.rs  choose.rs  define.rs  disable.rs  forget.rs  google.rs  hug.rs  lastcreated.rs  memo.rs  mod.rs  name.rs  quit.rs  reload.rs  remindme.rs  roll.rs  search.rs  seen.rs  tell.rs  wikipedia.rs  zyn.rs
src/db/: ban.rs  mod.rs  model.rs  model_macro.rs  name.rs  pages.rs  schema.rs
src/models/: model_macro.rs
src/response/: choice.rs  dictionary.rs  google.rs  reminder.rs  responder.rs  roll.rs  seen.rs  wikidot.rs  wikipedia.rs
src/wikidot/: attribution.rs  authors.rs  diff.rs  mod.rs  page.rs  pages.rs  titles.rs
