[package]
name = "tex"
version = "0.1.0"
authors = ["Joshua Booth <joshua.n.booth@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "*"
diesel = { version = "*", features = ["postgres"] }
dotenv = "^0.13.0"
failure = "*"
humantime = "*"
irc = "*"
lazy_static = "*"
multimap = "*"
percent-encoding = "*"
rand = "*"
regex = "*"
reqwest = "*"
select = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
xmlrpc = "*"
