[package]
name = "tex"
version = "0.1.0"
authors = ["Joshua Booth <joshua.n.booth@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "*"
chrono = "*"
diesel = { version = "*", features = ["postgres", "chrono"] }
dotenv = "*"
failure = "*"
getopts = "*"
hashbrown = "*"
humantime = "*"
irc = "*"
multimap = "*"
percent-encoding = "*"
rand = "*"
regex = "*"
reqwest = "*"
select = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
stash = "*"
tantivy = "*"
xmlrpc = "*"
